<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/calculationsLauncherTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculations"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calculationsErrorMessageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/performAdditionsButton"
        app:layout_constraintEnd_toEndOf="@+id/performAdditionsButton"
        app:layout_constraintStart_toStartOf="@+id/performAdditionsButton"
        tools:text="Error message" />

    <Button
        android:id="@+id/performAdditionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/perform_addition_calculations"
        app:layout_constraintBottom_toTopOf="@+id/performMultiplicationsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsLauncherTitleLabel" />

    <Button
        android:id="@+id/performMultiplicationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/perform_multiplication_calculations"
        app:layout_constraintBottom_toTopOf="@id/calculationsThreadsNOInput"
        app:layout_constraintEnd_toEndOf="@+id/performAdditionsButton"
        app:layout_constraintStart_toStartOf="@+id/performAdditionsButton"
        app:layout_constraintTop_toBottomOf="@+id/performAdditionsButton" />

    <EditText
        android:id="@+id/calculationsThreadsNOInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/threads"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/calculationsStatusInfoLabel"
        app:layout_constraintEnd_toStartOf="@+id/calculationsFactorInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/performMultiplicationsButton" />

    <EditText
        android:id="@+id/calculationsFactorInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/factor"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/calculationsThreadsNOInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculationsThreadsNOInput"
        app:layout_constraintTop_toTopOf="@+id/calculationsThreadsNOInput" />

    <TextView
        android:id="@+id/calculationsThreadsNOLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_threads"
        app:layout_constraintStart_toStartOf="@+id/calculationsThreadsNOInput"
        app:layout_constraintTop_toBottomOf="@+id/calculationsThreadsNOInput" />

    <TextView
        android:id="@+id/calculationsFactorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factor"
        app:layout_constraintStart_toEndOf="@+id/calculationsThreadsNOInput"
        app:layout_constraintTop_toBottomOf="@+id/calculationsFactorInput" />

    <TextView
        android:id="@+id/calculationsStatusInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/calculations_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calculationsResultInfoLabel"
        app:layout_constraintEnd_toStartOf="@+id/calculationsStatusValueLabel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsThreadsNOInput" />

    <TextView
        android:id="@+id/calculationsStatusValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_running"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculationsStatusInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculationsStatusInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/calculationsStatusInfoLabel"
        tools:text="status" />


    <TextView
        android:id="@+id/calculationsResultInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/calculations_result"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/abortCalculationsButton"
        app:layout_constraintEnd_toStartOf="@+id/calculationsResultValueLabel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsStatusInfoLabel" />

    <TextView
        android:id="@+id/calculationsResultValueLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:maxLines="3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculationsResultInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculationsResultInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/calculationsResultInfoLabel"
        tools:text="result" />

    <Button
        android:id="@+id/abortCalculationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abort_calculations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationsResultInfoLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>